kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lbg-ns
  labels:
    name: lbg-ns
