kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lbg-app-ingress
  namespace: lbg-ns
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/use-private-ip: "false"
spec:
  rules:
  - http:
      paths:
      - path: /patients
        pathType: Prefix
        backend:
          service:
            name: patient-service
            port:
              number: 3000
      - path: /appointments
        pathType: Prefix
        backend:
          service:
            name: appointment-service
            port:
              number: 3001
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: patient-service
            port:
              number: 3000
